--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "An app that listes out pixabay"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=3.2.0 <4.0.0"
 
 dependencies:
   basic_utils: ^5.5.1
@@ -24,12 +24,13 @@ dependencies:
   freezed: ^2.3.2
   freezed_annotation: ^2.2.0
   get_it: ^7.2.0
-  go_router: ^14.2.7
+  go_router: 
   google_fonts: ^4.0.4
   http_parser: ^4.0.2
   injectable: ^1.5.3
   internet_connection_checker: ^1.0.0+1
   intl: ^0.18.1
+  flutter_lazy_loading: ^1.1.3
   json_annotation: ^4.7.0
   json_serializable: ^6.5.4
   lottie: ^2.6.0
@@ -41,8 +42,8 @@ dependencies:
   webview_flutter: ^2.0.14
   responsive_builder: ^0.7.0
   get: ^4.6.5
-
-
+  
+  lazy_loading_list: ^1.0.1
 
 dev_dependencies:
   build_runner: ^2.3.3
