--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get: ^4.6.5
   
   lazy_loading_list: ^1.0.1
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   build_runner: ^2.3.3
@@ -56,6 +57,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
